@@ -1,3 +1,8 @@
+2006-10-06  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Fixed compatibility issue for wrong realurl configuration (see bug #4352)
+ * Updated class/function index
+
 2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Release of RealURL 1.1.2
